# xueqiu_api

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: ci.yml  pr-lint.yml  release.yml  stale-issues.yml
cookbook/: 01_quickstart_sync.py  02_quickstart_async.py  03_raw_json_escape_hatch.py  04_csindex_no_auth.py  05_danjuan_fund.py  06_eastmoney_convertible_bond.py  README.md
examples/: fetch_symbols.py  smoke_all.py
scripts/: dev_setup.bat  dev_setup.sh  fetch_f10_fixtures.py  format.bat  format.sh  lint.bat  lint.sh  release_notes.py  test.bat  test.sh  validate.bat  validate.sh
src/xueqiu/: __init__.py  client.py  errors.py  models.py  parsing.py
src/xueqiu/api/: __init__.py  _base.py  capital.py  csindex.py  cube.py  danjuan.py  eastmoney.py  f10.py  finance.py  portfolio.py  realtime.py  report.py  suggest.py  urls.py
src/xueqiu_api/: __init__.py
tests/: conftest.py  test_client_async.py  test_client_sync.py  test_csindex_api.py  test_danjuan_api.py  test_eastmoney_api.py  test_f10_fixtures.py  test_other_apis.py  test_realtime_api.py
