[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "xueqiu_api"
version = "0.1.0"
description = "Modern Xueqiu (雪球) API client with Pydantic models (sync + async)."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Qiongyu Li", email = "libiao_0303@live.com" }]
maintainers = [{ name = "Qiongyu Li", email = "libiao_0303@live.com" }]
keywords = ["xueqiu", "snowball", "finance", "sdk", "api"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
]

[project.urls]
Homepage = "https://github.com/liqiongyu/xueqiu_api"
Repository = "https://github.com/liqiongyu/xueqiu_api"
Issues = "https://github.com/liqiongyu/xueqiu_api/issues"
Changelog = "https://github.com/liqiongyu/xueqiu_api/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "respx>=0.21.0",
  "ruff>=0.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/xueqiu", "src/xueqiu_api"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/README.md",
  "/LICENSE",
  "/pyproject.toml",
]
exclude = [
  "/tests/fixtures/**",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
